--- a/experiments/zeroshot/univariate/config.yaml
+++ b/experiments/zeroshot/univariate/config.yaml
@@ -22,6 +22,6 @@ forecast:
   quantile_levels: [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9]
 
 output:
-  output_dir: "./experiments/zeroshot/univariate/results"
+  output_dir: "univariate/results"
   save_plots: true
   save_metrics: true
