--- a/experiments/finetune_lora/2covariates/config.yaml
+++ b/experiments/finetune_lora/2covariates/config.yaml
@@ -31,7 +31,7 @@ forecast:
   quantile_levels: [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9]
 
 output:
-  output_dir: "./experiments/finetune_lora/2covariates/results"
-  checkpoint_dir: "./experiments/finetune_lora/2covariates/results/checkpoint"
+  output_dir: "2covariates/results"
+  checkpoint_dir: "2covariates/results/checkpoint"
   save_plots: true
   save_metrics: true
