--- a/experiments/finetune_lora/allcovariates/config.yaml
+++ b/experiments/finetune_lora/allcovariates/config.yaml
@@ -37,7 +37,7 @@ forecast:
   quantile_levels: [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9]
 
 output:
-  output_dir: "./experiments/finetune_lora/allcovariates/results"
-  checkpoint_dir: "./experiments/finetune_lora/allcovariates/results/checkpoint"
+  output_dir: "allcovariates/results"
+  checkpoint_dir: "allcovariates/results/checkpoint"
   save_plots: true
   save_metrics: true
