--- a/experiments/finetune_lora/2covariates/config.yaml
+++ b/experiments/finetune_lora/2covariates/config.yaml
@@ -28,7 +28,7 @@ training:
 
 forecast:
   prediction_days: 30  # Rolling prediction for 30 days on test set
-  quantile_levels: [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9]
+  quantile_levels: [0.01, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 0.99]
 
 output:
   output_dir: "2covariates/results"
