--- a/experiments/zeroshot/univariate/config.yaml
+++ b/experiments/zeroshot/univariate/config.yaml
@@ -19,7 +19,7 @@ forecast:
   prediction_days: 30  # Rolling prediction for 30 days
   prediction_length: 1  # 1-day ahead
   context_length: 1024  # Use last 1024 days for context
-  quantile_levels: [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9]
+  quantile_levels: [0.01, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 0.99]
 
 output:
   output_dir: "univariate/results"
