retrain 1k steps all cov; ablation script

--- a/experiments/finetune_lora/allcovariates/results/checkpoint/finetuned-ckpt/adapter_config.json
+++ b/experiments/finetune_lora/allcovariates/results/checkpoint/finetuned-ckpt/adapter_config.json
@@ -33,10 +33,10 @@
   "revision": null,
   "target_modules": [
     "self_attention.v",
-    "self_attention.o",
-    "output_patch_embedding.output_layer",
     "self_attention.q",
-    "self_attention.k"
+    "self_attention.k",
+    "output_patch_embedding.output_layer",
+    "self_attention.o"
   ],
   "target_parameters": null,
   "task_type": null,
